adjusted several properties to align content correctly on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -86,3 +86,9 @@ html, body {
   overflow-x: hidden;
   overflow-y: hidden;
 }
+
+/* @media (max-width: 375px) {
+  html, body {
+    overflow-y: auto;
+  }
+} */
