--- a/src/stylesheets/portfoliostyle.scss
+++ b/src/stylesheets/portfoliostyle.scss
@@ -184,13 +184,10 @@
         }
     
         .nav-buttons {
-            position: absolute;
-            bottom: 18%;
             display: flex;
             justify-content: space-evenly;
-            width: 125%;
-            // border: solid 2px red;
-    
+            width: 50%;
+            transform: translateY(-40px);
             div {
                 
                 display: flex;
@@ -240,73 +237,73 @@
 
 //Media Queries for Screen Sizes
 //320 x 640
-@media (max-width: 320px) {
-    .portfolio-container {
-        background-size: 890px;
-        .carousel {
-            .inner-items {
-                .project-item {
-                    .project-cotent{
-                        padding: 4px;
-                        border-top: solid 7px #c69781;
-                        border-right: solid 7px #aa6442;
-                        border-bottom: solid 7px #934c29;
-                        border-left: solid 7px #aa6442;
-                        .image-slider {
-                            .project-image-container {
-                                height: 150px;
-                                width: 200px;
-                                margin: 0px;
-                                .project-images {
-                                    border: solid 2px black;
-                                }
-                                .right-arrow-container {
-                                    height: 97%;
-                                    right: 1%;
-                                }
-                                .left-arrow-container {
-                                    margin: 0px;
-                                    height: 97%;
-                                    left: -1%;
-                                }
-                                .arrow-icon {
-                                    height: 25px;
-                                }
-                            }
-                        }
+// @media (max-width: 320px) {
+//     .portfolio-container {
+//         background-size: 890px;
+//         .carousel {
+//             .inner-items {
+//                 .project-item {
+//                     .project-cotent{
+//                         padding: 4px;
+//                         border-top: solid 7px #c69781;
+//                         border-right: solid 7px #aa6442;
+//                         border-bottom: solid 7px #934c29;
+//                         border-left: solid 7px #aa6442;
+//                         .image-slider {
+//                             .project-image-container {
+//                                 height: 150px;
+//                                 width: 200px;
+//                                 margin: 0px;
+//                                 .project-images {
+//                                     border: solid 2px black;
+//                                 }
+//                                 .right-arrow-container {
+//                                     height: 97%;
+//                                     right: 1%;
+//                                 }
+//                                 .left-arrow-container {
+//                                     margin: 0px;
+//                                     height: 97%;
+//                                     left: -1%;
+//                                 }
+//                                 .arrow-icon {
+//                                     height: 25px;
+//                                 }
+//                             }
+//                         }
     
-                        .project-text {
-                            margin: 5px;
-                            width: 180px;
-                            font-size: 12px;
+//                         .project-text {
+//                             margin: 5px;
+//                             width: 180px;
+//                             font-size: 12px;
                             
-                            .project-title {
-                                font-size: 15px;
-                            }
-                            .project-links {
-                                display: flex;
-                                align-items: center;
-                                margin: 10px;
+//                             .project-title {
+//                                 font-size: 15px;
+//                             }
+//                             .project-links {
+//                                 display: flex;
+//                                 align-items: center;
+//                                 margin: 10px;
                                 
-                                img {
-                                    height: 15px;
-                                    border: none;
-                                    margin: 0;
-                                    margin-right:6px;
-                                }
+//                                 img {
+//                                     height: 15px;
+//                                     border: none;
+//                                     margin: 0;
+//                                     margin-right:6px;
+//                                 }
         
-                                a {
-                                    text-decoration: underline;
-                                    color: black;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+//                                 a {
+//                                     text-decoration: underline;
+//                                     color: black;
+//                                 }
+//                             }
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
 
 
 @media (max-width: 375px) {
@@ -345,10 +342,12 @@
                         }
     
                         .project-text {
+                            display: flex;
                             margin: 10px;
                             width: 180px;
+                            height: 100px;
                             font-size: 14px;
-                            
+                            overflow-y: auto;
                             .project-title {
                                 font-size: 18px;
                             }
@@ -372,6 +371,9 @@
                         }
                     }
                 }
+            }
+            .nav-buttons {
+                bottom: 27%;
             }
         }
     }
